...
            android:title="@string/schedule_nav_item_activity_event_showcase" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_thumbs_up_down_black_24dp"
            android:title="@string/feedback_nav" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_email_black_24dp"
            android:title="@string/contact_nav_item_activity_event_showcase" />
    </group>

    <group android:checkableBehavior="single"
        android:menuCategory="system"
...
