...
    <string name="contact_form_hint_message">Content of the message</string>
    <string name="contact_form_hint_name">Full name</string>
    <string name="contact_form_send_button_text">Send</string>
    <string name="contact_form_choose_mail">Send email with</string>
    <string name="contact_form_no_email_clients">There are no email clients installed.</string>
    <string name="contact_form_main_go_button">Contact</string>
    <string name="contact_form_error">Field cannot be empty</string>

    <string name="my_schedule_add_to_calendar">Add to my calendar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news_nav_item_activity_event_showcase">News</string>
...
