<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize">

    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent"
                android:id="@+id/create_form"
                android:visibility="visible">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_margin="10dp">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/create_form_artist"
                android:hint="@string/schedule_create_form_hint_artist"
                android:layout_weight="10"
                android:inputType="text"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/create_form_genre"
                android:hint="@string/schedule_create_form_hint_genre"
                android:layout_weight="10"
                android:inputType="text"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/create_form_room"
                android:hint="@string/schedule_create_form_hint_room"
                android:layout_weight="10"
                android:inputType="text"/>

        <EditText
                android:hint="@string/schedule_create_form_hint_begin_date"
                android:clickable="true"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:id="@+id/create_form_begin_date"
                android:inputType="date"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/create_form_begin_time"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/schedule_create_form_hint_begin_time"
                android:layout_weight="10"
                android:inputType="time"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/create_form_duration"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/schedule_create_form_hint_duration"
                android:layout_weight="10"
                android:inputType="time"/>

        <EditText
                android:id="@+id/create_form_description"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="top"
                android:hint="@string/schedule_create_form_hint_description"
                android:inputType="textMultiLine"
                android:layout_weight="100"/>


        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/create_form_send_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_form_send_button_text"
                android:layout_weight="10"
                style="@style/Button_global"/>

    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>